# online-services

./: CLAUDE.md  README.md  docker-compose.yaml
.github/: dependabot.yml
.github/actions/build-containers/: action.yml
.github/actions/build-showcase-website/: action.yml
.github/actions/detect-changes/: action.yml
.github/workflows/: auto-approve.yml  auto-pr-deploy-develop-to-master.yml  auto-pr-merge-back-master-to-develop.yml  build-showcase-website.yml  check-pr.yml  ci.yml  cleanup-docker-image.yml
backend/: Cargo.toml  Dockerfile  dev.sh  spec.json
backend/dev/: Dockerfile  dev.sh
backend/docker/: Dockerfile
backend/src/: main.rs  settings.rs
deploy/: Justfile  README.md
deploy/backup-explorer/: docker-compose.yaml
deploy/production/: README.md  docker-compose.yaml  update.sh
deploy/production/authentik/: Dockerfile  docker-compose.yaml  postgres-backup-crontab
deploy/production/backend/: docker-compose.yaml  sample.env
deploy/production/dozzle/: docker-compose.yaml
deploy/production/kopia/: docker-compose.yaml  sample.env
deploy/production/observability/: config.alloy  docker-compose.yaml  grafana.ini  loki-config.yaml  prometheus.yml
deploy/production/planka/: docker-compose.yaml
deploy/production/portal/: docker-compose.yaml
deploy/production/traefik/: .dockerignore  Dockerfile  docker-compose.yaml  traefik.yml
deploy/production/watchtower/: docker-compose.yaml
deploy/production/website/: docker-compose.yaml
deploy/staging/: README.md  docker-compose.yaml  update.sh
deploy/staging/backend/: docker-compose.yaml  sample.env
deploy/staging/portal/: docker-compose.yaml
dev/: generate-certs.sh  run.sh
dev/traefik/: traefik.yml
openapi/: .gitignore  dev.sh
openapi/docker/: Dockerfile
production/: update.sh
production/authentik/: docker-compose.yaml
production/kopia/: docker-compose.yaml
production/planka/: docker-compose.yaml
production/traefik/: Dockerfile  docker-compose.yaml
production/website/: docker-compose.yaml
scripts/: replace-images-with-blanks.sh
services/: Justfile  README.md  docker-compose.yaml
services/backend/: .dockerignore  Cargo.toml  Dockerfile  diesel.toml
services/backend/dev/: Dockerfile  dev.sh  fetch-api-specs.sh
services/backend/migrations/2025-03-30-141622_create_semesters/: down.sql  up.sql
services/backend/migrations/2026-04-27-192722-0000_add_concerts/: down.sql  up.sql
services/backend/seeds/: dev.sql
services/backend/src/: auth.rs  error.rs  main.rs  models.rs  public.rs  schema.rs  settings.rs
services/backend/src/auth/: mod.rs  policies.rs  principal.rs
services/backend/src/models/: concerts.rs  mod.rs
services/backend/src/private/: concerts.rs  error.rs  locations.rs  misc.rs  mod.rs  pieces.rs  semesters.rs  users.rs
services/dev/: diesel.sh  generate-certs.sh  run.sh
services/dev/fake-auth/: index.js  (+3 more)
services/openapi/: .gitignore
services/portal/: .dockerignore  .gitignore  Dockerfile  README.md  app.vue  eslint.config.mjs  nuxt.config.ts  openapi-ts.config.ts  package.json
services/showcase-website/: .gitignore  Dockerfile  README.md  openapi-ts.config.ts  package.json
showcase-website/: .gitignore  Dockerfile  README.md  app.vue  eslint.config.mjs  nuxt.config.ts  openapi-ts.config.ts  package.json
showcase-website/components/: TheAltcha.vue  TheConcerts.vue  TheContact.vue
showcase-website/dev/: Dockerfile  generate-client.sh
showcase-website/pages/: index.vue
(+49 files in other folders)
