[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.15.6", default-features = false, features = [] }
poem = "3.1.6"
poem-openapi = { version = "5.1.5", features = [
    "swagger-ui",
    "email",
    "chrono",
] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
